--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
 </head>
 <body>
 <h1>
-     驾照预约 | <a href="/users">Users</a> |
-  <a href="/orders">Orders</a>
+     驾照预约 | <a href="/users">所有用户</a> |
+  <a href="/orders">所有任务</a> |
+  <a href="/">每日任务</a>
 </h1>
 <hr/>
 <%= yield %>
